add cart, watchlist and react in top product section. add top categories.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -431,7 +431,7 @@
     </div>
   </div>
 
-  <!-- product-cardS -->
+  <!-- /----::product-cards::----/ -->
   <section class="product-section">
     <!-- /----::product-section-title::----/ -->
     <div class="product-section-title">
@@ -507,6 +507,87 @@
                 <h6>{{ "$" }}{{ "155.00" }} {{ "usd" | uppercase }}</h6>
               </div>
             </div>
+
+            <div class="product-card-watch-list">
+              <div class="product-card-watch-list-child">
+                <a href="#">
+                  <svg id="hcart" viewBox="0 0 512 512">
+                    <path
+                      d="M488.542,174.916H293.737V27.028c0-10.686-8.693-19.378-19.378-19.378h-36.717c-10.686,0-19.378,8.693-19.378,19.378
+                    v147.888H23.458C10.524,174.916,0,185.439,0,198.375v50.57c0,12.936,10.524,23.458,23.458,23.458h3.375L53.27,460.293
+                    c3.534,25.117,25.327,44.057,50.691,44.057h304.076c25.365,0,47.157-18.941,50.691-44.057l26.438-187.891h3.375
+                    c12.936,0,23.458-10.523,23.458-23.458v-50.57C512,185.439,501.478,174.916,488.542,174.916z M238.661,28.048h34.677v194.805
+                    h-34.677V28.048z M438.53,457.451c-2.125,15.108-15.235,26.502-30.492,26.502H103.961c-15.257,0-28.366-11.393-30.492-26.502
+                    L47.432,272.402h417.135L438.53,457.451z M491.602,248.944c0,1.687-1.373,3.06-3.06,3.06H23.458c-1.687,0-3.06-1.373-3.06-3.06
+                    v-50.57c0-1.687,1.373-3.06,3.06-3.06h194.805v28.558c0,10.686,8.693,19.378,19.378,19.378h36.717
+                    c10.686,0,19.378-8.693,19.378-19.378v-28.558h194.805c1.687,0,3.06,1.373,3.06,3.06V248.944z"
+                    ></path>
+                    <path
+                      d="M110.151,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C120.351,300.854,115.784,296.287,110.151,296.287z"
+                    ></path>
+                    <path
+                      d="M168.491,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    s10.199-4.567,10.199-10.199V306.486C178.69,300.854,174.124,296.287,168.491,296.287z"
+                    ></path>
+                    <path
+                      d="M226.83,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C237.029,300.854,232.463,296.287,226.83,296.287z"
+                    ></path>
+                    <path
+                      d="M285.17,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C295.369,300.854,290.802,296.287,285.17,296.287z"
+                    ></path>
+                    <path
+                      d="M343.509,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C353.708,300.854,349.141,296.287,343.509,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,296.287c-5.632,0-10.199,4.567-10.199,10.199v8.164c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-8.164C412.048,300.854,407.481,296.287,401.849,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,343.204c-5.632,0-10.199,4.567-10.199,10.199v95.871c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-95.871C412.048,347.771,407.481,343.204,401.849,343.204z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg
+                    aria-hidden="true"
+                    focusable="false"
+                    role="presentation"
+                    class="icon iconwish"
+                    viewBox="0 0 176.104 176.104"
+                  >
+                    <path
+                      d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015
+                        c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878
+                        C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771
+                        c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg viewBox="0 0 511.999 511.999">
+                    <path
+                      d="M508.745,246.041c-4.574-6.257-113.557-153.206-252.748-153.206S7.818,239.784,3.249,246.035
+                        c-4.332,5.936-4.332,13.987,0,19.923c4.569,6.257,113.557,153.206,252.748,153.206s248.174-146.95,252.748-153.201
+                        C513.083,260.028,513.083,251.971,508.745,246.041z M255.997,385.406c-102.529,0-191.33-97.533-217.617-129.418
+                        c26.253-31.913,114.868-129.395,217.617-129.395c102.524,0,191.319,97.516,217.617,129.418
+                        C447.361,287.923,358.746,385.406,255.997,385.406z"
+                    ></path>
+                    <path
+                      d="M255.997,154.725c-55.842,0-101.275,45.433-101.275,101.275s45.433,101.275,101.275,101.275
+                        s101.275-45.433,101.275-101.275S311.839,154.725,255.997,154.725z M255.997,323.516c-37.23,0-67.516-30.287-67.516-67.516
+                        s30.287-67.516,67.516-67.516s67.516,30.287,67.516,67.516S293.227,323.516,255.997,323.516z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </ng-container>
       </div>
@@ -555,6 +636,86 @@
                   </a>
                 </p>
                 <h6>{{ "$" }}{{ "155.00" }} {{ "usd" | uppercase }}</h6>
+              </div>
+            </div>
+            <div class="product-card-watch-list">
+              <div class="product-card-watch-list-child">
+                <a href="#">
+                  <svg id="hcart" viewBox="0 0 512 512">
+                    <path
+                      d="M488.542,174.916H293.737V27.028c0-10.686-8.693-19.378-19.378-19.378h-36.717c-10.686,0-19.378,8.693-19.378,19.378
+                    v147.888H23.458C10.524,174.916,0,185.439,0,198.375v50.57c0,12.936,10.524,23.458,23.458,23.458h3.375L53.27,460.293
+                    c3.534,25.117,25.327,44.057,50.691,44.057h304.076c25.365,0,47.157-18.941,50.691-44.057l26.438-187.891h3.375
+                    c12.936,0,23.458-10.523,23.458-23.458v-50.57C512,185.439,501.478,174.916,488.542,174.916z M238.661,28.048h34.677v194.805
+                    h-34.677V28.048z M438.53,457.451c-2.125,15.108-15.235,26.502-30.492,26.502H103.961c-15.257,0-28.366-11.393-30.492-26.502
+                    L47.432,272.402h417.135L438.53,457.451z M491.602,248.944c0,1.687-1.373,3.06-3.06,3.06H23.458c-1.687,0-3.06-1.373-3.06-3.06
+                    v-50.57c0-1.687,1.373-3.06,3.06-3.06h194.805v28.558c0,10.686,8.693,19.378,19.378,19.378h36.717
+                    c10.686,0,19.378-8.693,19.378-19.378v-28.558h194.805c1.687,0,3.06,1.373,3.06,3.06V248.944z"
+                    ></path>
+                    <path
+                      d="M110.151,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C120.351,300.854,115.784,296.287,110.151,296.287z"
+                    ></path>
+                    <path
+                      d="M168.491,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    s10.199-4.567,10.199-10.199V306.486C178.69,300.854,174.124,296.287,168.491,296.287z"
+                    ></path>
+                    <path
+                      d="M226.83,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C237.029,300.854,232.463,296.287,226.83,296.287z"
+                    ></path>
+                    <path
+                      d="M285.17,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C295.369,300.854,290.802,296.287,285.17,296.287z"
+                    ></path>
+                    <path
+                      d="M343.509,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C353.708,300.854,349.141,296.287,343.509,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,296.287c-5.632,0-10.199,4.567-10.199,10.199v8.164c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-8.164C412.048,300.854,407.481,296.287,401.849,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,343.204c-5.632,0-10.199,4.567-10.199,10.199v95.871c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-95.871C412.048,347.771,407.481,343.204,401.849,343.204z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg
+                    aria-hidden="true"
+                    focusable="false"
+                    role="presentation"
+                    class="icon iconwish"
+                    viewBox="0 0 176.104 176.104"
+                  >
+                    <path
+                      d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015
+                        c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878
+                        C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771
+                        c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg viewBox="0 0 511.999 511.999">
+                    <path
+                      d="M508.745,246.041c-4.574-6.257-113.557-153.206-252.748-153.206S7.818,239.784,3.249,246.035
+                        c-4.332,5.936-4.332,13.987,0,19.923c4.569,6.257,113.557,153.206,252.748,153.206s248.174-146.95,252.748-153.201
+                        C513.083,260.028,513.083,251.971,508.745,246.041z M255.997,385.406c-102.529,0-191.33-97.533-217.617-129.418
+                        c26.253-31.913,114.868-129.395,217.617-129.395c102.524,0,191.319,97.516,217.617,129.418
+                        C447.361,287.923,358.746,385.406,255.997,385.406z"
+                    ></path>
+                    <path
+                      d="M255.997,154.725c-55.842,0-101.275,45.433-101.275,101.275s45.433,101.275,101.275,101.275
+                        s101.275-45.433,101.275-101.275S311.839,154.725,255.997,154.725z M255.997,323.516c-37.23,0-67.516-30.287-67.516-67.516
+                        s30.287-67.516,67.516-67.516s67.516,30.287,67.516,67.516S293.227,323.516,255.997,323.516z"
+                    ></path>
+                  </svg>
+                </a>
               </div>
             </div>
           </div>
@@ -607,18 +768,135 @@
                 <h6>{{ "$" }}{{ "155.00" }} {{ "usd" | uppercase }}</h6>
               </div>
             </div>
+            <div class="product-card-watch-list">
+              <div class="product-card-watch-list-child">
+                <a href="#">
+                  <svg id="hcart" viewBox="0 0 512 512">
+                    <path
+                      d="M488.542,174.916H293.737V27.028c0-10.686-8.693-19.378-19.378-19.378h-36.717c-10.686,0-19.378,8.693-19.378,19.378
+                    v147.888H23.458C10.524,174.916,0,185.439,0,198.375v50.57c0,12.936,10.524,23.458,23.458,23.458h3.375L53.27,460.293
+                    c3.534,25.117,25.327,44.057,50.691,44.057h304.076c25.365,0,47.157-18.941,50.691-44.057l26.438-187.891h3.375
+                    c12.936,0,23.458-10.523,23.458-23.458v-50.57C512,185.439,501.478,174.916,488.542,174.916z M238.661,28.048h34.677v194.805
+                    h-34.677V28.048z M438.53,457.451c-2.125,15.108-15.235,26.502-30.492,26.502H103.961c-15.257,0-28.366-11.393-30.492-26.502
+                    L47.432,272.402h417.135L438.53,457.451z M491.602,248.944c0,1.687-1.373,3.06-3.06,3.06H23.458c-1.687,0-3.06-1.373-3.06-3.06
+                    v-50.57c0-1.687,1.373-3.06,3.06-3.06h194.805v28.558c0,10.686,8.693,19.378,19.378,19.378h36.717
+                    c10.686,0,19.378-8.693,19.378-19.378v-28.558h194.805c1.687,0,3.06,1.373,3.06,3.06V248.944z"
+                    ></path>
+                    <path
+                      d="M110.151,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C120.351,300.854,115.784,296.287,110.151,296.287z"
+                    ></path>
+                    <path
+                      d="M168.491,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    s10.199-4.567,10.199-10.199V306.486C178.69,300.854,174.124,296.287,168.491,296.287z"
+                    ></path>
+                    <path
+                      d="M226.83,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.633,0,10.199-4.567,10.199-10.199V306.486C237.029,300.854,232.463,296.287,226.83,296.287z"
+                    ></path>
+                    <path
+                      d="M285.17,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C295.369,300.854,290.802,296.287,285.17,296.287z"
+                    ></path>
+                    <path
+                      d="M343.509,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199V306.486C353.708,300.854,349.141,296.287,343.509,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,296.287c-5.632,0-10.199,4.567-10.199,10.199v8.164c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-8.164C412.048,300.854,407.481,296.287,401.849,296.287z"
+                    ></path>
+                    <path
+                      d="M401.849,343.204c-5.632,0-10.199,4.567-10.199,10.199v95.871c0,5.632,4.567,10.199,10.199,10.199
+                    c5.632,0,10.199-4.567,10.199-10.199v-95.871C412.048,347.771,407.481,343.204,401.849,343.204z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg
+                    aria-hidden="true"
+                    focusable="false"
+                    role="presentation"
+                    class="icon iconwish"
+                    viewBox="0 0 176.104 176.104"
+                  >
+                    <path
+                      d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015
+                        c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878
+                        C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771
+                        c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z"
+                    ></path>
+                  </svg>
+                </a>
+
+                <a href="#">
+                  <svg viewBox="0 0 511.999 511.999">
+                    <path
+                      d="M508.745,246.041c-4.574-6.257-113.557-153.206-252.748-153.206S7.818,239.784,3.249,246.035
+                        c-4.332,5.936-4.332,13.987,0,19.923c4.569,6.257,113.557,153.206,252.748,153.206s248.174-146.95,252.748-153.201
+                        C513.083,260.028,513.083,251.971,508.745,246.041z M255.997,385.406c-102.529,0-191.33-97.533-217.617-129.418
+                        c26.253-31.913,114.868-129.395,217.617-129.395c102.524,0,191.319,97.516,217.617,129.418
+                        C447.361,287.923,358.746,385.406,255.997,385.406z"
+                    ></path>
+                    <path
+                      d="M255.997,154.725c-55.842,0-101.275,45.433-101.275,101.275s45.433,101.275,101.275,101.275
+                        s101.275-45.433,101.275-101.275S311.839,154.725,255.997,154.725z M255.997,323.516c-37.23,0-67.516-30.287-67.516-67.516
+                        s30.287-67.516,67.516-67.516s67.516,30.287,67.516,67.516S293.227,323.516,255.997,323.516z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </ng-container>
       </div>
     </div>
   </section>
 
+  <!-- offer-section -->
   <section class="offer-text">
     <h1>Rewards just for shopping!</h1>
     <p>
       Don’t forget to opt into Multistore News to have your offers and rewards
       delivered right to your inbox!
     </p>
+  </section>
+
+  <!-- /----::top-categories::----/ -->
+  <section class="top-categories">
+    <div class="category-latest-big-img product-banner-hover-one">
+      <img
+        src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/450x520.jpg?v=1614293348"
+        alt="top-categories-product"
+      />
+    </div>
+
+    <div class="top-categories-card-sec">
+      <!-- /----::product-categories-section-title::----/ -->
+      <div class="product-section-title">
+        <div class="product-title-heading">
+          <h3>{{ "top categories" | titlecase }}</h3>
+        </div>
+      </div>
+
+      <!-- /----::product-categories-card-section::----/ -->
+      <div class="top-categories-cards">
+        <ng-container *ngFor="let data of [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]">
+          <div class="short-card">
+            <div class="categories-card-img">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0531/1604/3454/collections/6_1024x1024.jpg?v=1611749419"
+                alt=""
+              />
+            </div>
+            <div class="categories-card-info">
+              <h5>{{ "Fashion" | uppercase }}</h5>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+    </div>
   </section>
 
   <br />
